--- a/style.css
+++ b/style.css
@@ -8,3 +8,7 @@
 .btn-outline-secondary:not(:disabled):not(.disabled).active:focus, .btn-outline-secondary:not(:disabled):not(.disabled):active:focus{
  box-shadow: none;!important; 
 }
+.progress .progress-bar{
+  transition:width 0s ;!important
+  transition-timing-function:cubic-bezier(0,.95,0,.95);!important
+}
